# ntsync

./: .editorconfig  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: 1-unknown-error.yaml  1-unknown-error.yml  issue_template.yml
src/: error.rs  event.rs  internal.rs  lib.rs  mutex.rs  semaphore.rs  wait.rs
tests/: clean_up.rs  multiple_instances.rs  simple.rs  threaded_event.rs  threaded_mutex.rs  threaded_semaphore.rs
tests/fixtures/: mod.rs
