[dependencies]
bitflags = "2.9"
derive-new = "0.7"
ioctls = "0.6"

[dependencies.libc]
features = ["extra_traits", "align", "const-extern-fn"]
version = "0.2"

[dependencies.log]
features = ["std"]
version = "0"

[dependencies.rand]
optional = true
version = "0.9"

[dev-dependencies]
rstest = "0.26"

[dev-dependencies.test-log]
features = ["trace"]
version = "0.2"

[features]
default = ["random", "semaphore", "mutex"]
mutex = []
random = ["dep:rand"]
semaphore = []
unstable = ["unstable_mutex"]
unstable_mutex = ["mutex"]

[package]
description = "An simple crate for using the new ntsync linux driver with rust."
documentation = "https://docs.rs/ntsync"
edition = "2024"
license = "LGPL-3.0-only"
name = "ntsync"
repository = "https://github.com/stop5/ntsync"
version = "0.1.4"

[package.metadata.docs.rs]
features = ["unstable", "default"]
