[build-dependencies]
cfg_aliases = "0.2.1"

[dependencies]
bitflags = "2"
derive-new = "0"

[dependencies.log]
default-features = false
features = ["std", "kv"]
version = "0"

[dependencies.nix]
default-features = false
features = ["ioctl"]
version = "0"

[dependencies.rand]
default-features = false
features = ["thread_rng"]
optional = true
version = "0.9"

[dev-dependencies]
rstest = "0.26"

[dev-dependencies.test-log]
features = ["trace"]
version = "0.2"

[features]
default = ["random", "semaphore", "mutex"]
mutex = []
random = ["dep:rand"]
semaphore = []
unstable = ["unstable_mutex"]
unstable_mutex = ["mutex"]

[package]
categories = ["concurrency", "os::linux-apis"]
description = "An simple crate for using the new ntsync linux driver with rust."
documentation = "https://docs.rs/ntsync"
edition = "2024"
keywords = ["linux", "ntsync"]
license = "LGPL-3.0-only"
name = "ntsync"
repository = "https://github.com/stop5/ntsync"
version = "0.3.0"

[package.metadata.docs.rs]
features = ["unstable", "default"]

[workspace]
