[build-dependencies.cfg_aliases]
version = "0.2"

[dependencies.bitflags]
version = "2"

[dependencies.derive-new]
version = "0"

[dependencies.log]
default-features = false
features = ["std", "kv"]
version = "0"

[dependencies.nix]
default-features = false
features = ["ioctl"]
version = "0"

[dependencies.rand]
default-features = false
features = ["thread_rng"]
optional = true
version = "0.9"

[dev-dependencies]
rstest = "0"

[dev-dependencies.test-log]
features = ["trace"]
version = "0.2"

[features]
default = ["random", "semaphore", "mutex"]
mutex = []
random = ["dep:rand"]
semaphore = []
unstable = ["unstable_mutex"]
unstable_mutex = ["mutex"]

[package]
categories = ["concurrency", "os::linux-apis"]
description = "An simple crate for using the new ntsync linux driver with rust."
documentation = "https://docs.rs/ntsync"
edition = "2024"
keywords = ["linux", "ntsync"]
license = "LGPL-3.0-only"
name = "ntsync"
repository = "https://github.com/stop5/ntsync"
version = "0.4.0"

[package.metadata.docs.rs]
features = ["unstable", "default"]

[workspace.lints.clippy]
absolute_paths = "deny"
assigning_clones = "deny"
clone_on_copy = "deny"
collapsible_if = "deny"
empty_enums = "warn"
expect_used = "deny"
expl_impl_clone_on_copy = "deny"
format_push_string = "deny"
future_not_send = "warn"
identity_op = "deny"
ip_constant = "deny"
join_absolute_paths = "deny"
macro_use_imports = "deny"
manual_assert = "deny"
manual_let_else = "deny"
manual_range_contains = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_safety_doc = "deny"
module_name_repetitions = "deny"
multiple_crate_versions = "warn"
panic = "deny"
single_component_path_imports = "allow"
string_lit_as_bytes = "deny"
todo = "warn"
too_many_lines = "deny"
unimplemented = "warn"
unnecessary_debug_formatting = "deny"
unnecessary_self_imports = "deny"
unused_trait_names = "deny"
unwrap_used = "deny"
